@@ -1,3 +1,9 @@
+2012-03-08  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix CU relative vs. absolute DIE offsets.
+	* gdb.dwarf2/dw2-op-call.S: New compilation unit preceding the existing
+	one.
+
 2012-01-06  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.base/auxv.exp: Reformat the copyright notice.
